<resources>
    <string name="app_name">Notemarks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_notes_title">Notes</string>
    <string name="menu_to_do_title">Todo</string>
    <string name="text_add_note">Add notes</string>
    <string name="text_menu_save">Save</string>
    <string name="text_menu_custom">Custom</string>
    <string name="text_menu_delete">Delete</string>
    <string name="text_select_priority">Select Priority</string>
    <string name="text_low_priority">Low priority</string>
    <string name="text_medium_priority">Medium priority</string>
    <string name="text_high_priority">High priority</string>
    <string name="text_no_notes">No notes</string>
    <string name="text_hint_note_title">Title..</string>
    <string name="text_menu_delete_notes">Delete All</string>
    <string name="notes">Notes app</string>
    <string name="text_menu_sort_by">Sort By</string>
    <string name="text_menu_sort_by_high">Sort by High</string>
    <string name="text_menu_sort_by_low">Sort by Low</string>
    <string name="text_add_to_do">Add To Do</string>
    <string name="text_hint_todo">Enter task..</string>
    <string name="text_update">Update</string>
    <string name="text_todo_done">Done</string>
    <string name="text_to_do">To Do</string>
    <string name="text_delete_all_todos">Delete All Todos</string>
    <string name="enter_text">enter text..</string>
    <string name="date">date</string>
    <string name="subtitle">Subtitle</string>
    <string name="title">Title</string>
</resources>