<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.note.add.NoteAddFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_note_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:background="@color/background"
            app:menu="@menu/menu_top_note_add"
            app:navigationIcon="@drawable/ic_arrow"
            app:navigationIconTint="@color/primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup_note_add"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_low_add"
            style="@style/ThemeOverlay.Notemarks.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_low_priority" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_medium_add"
            style="@style/ThemeOverlay.Notemarks.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_medium_priority" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_high_add"
            style="@style/ThemeOverlay.Notemarks.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_high_priority" />
    </com.google.android.material.chip.ChipGroup>

    <EditText
        android:id="@+id/edt_note_update_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:ems="10"
        android:maxLength="20"
        android:hint="@string/text_hint_note_title"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="8dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:maxLines="1"
        android:textSize="16pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup_note_add" />

    <EditText
        android:id="@+id/edt_note_update_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_text"
        android:inputType="textMultiLine"
        android:lineSpacingMultiplier="1"
        android:paddingHorizontal="8dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_note_update_title"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>